// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulTable > Snapshot Test > Basic Table Snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-var-r1 delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r1"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table css-var-r1 delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Zhang San
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Li Si
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="delightful-pagination delightful-table-pagination delightful-table-pagination-right css-dev-only-do-not-override-yotw4n css-var-r1"
        >
          <li
            aria-disabled="true"
            class="delightful-pagination-prev delightful-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="delightful-pagination-item delightful-pagination-item-1 delightful-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="delightful-pagination-next delightful-pagination-disabled"
            title="Next Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulTable > Snapshot Test > Table Snapshot with Pagination 1`] = `
<DocumentFragment>
  <div
    class="css-var-r3 delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r3"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table css-var-r3 delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Zhang San
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Li Si
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="delightful-pagination delightful-table-pagination delightful-table-pagination-right css-dev-only-do-not-override-yotw4n css-var-r3"
        >
          <li
            aria-disabled="true"
            class="delightful-pagination-prev delightful-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="delightful-pagination-item delightful-pagination-item-1 delightful-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="delightful-pagination-next delightful-pagination-disabled"
            title="Next Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulTable > Snapshot Test > Table Snapshot with Sorting 1`] = `
<DocumentFragment>
  <div
    class="css-var-r4 delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r4"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table css-var-r4 delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      aria-label="Name"
                      class="delightful-table-cell delightful-table-column-has-sorters"
                      scope="col"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="test-id"
                        class="delightful-table-column-sorters"
                      >
                        <span
                          class="delightful-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="delightful-table-column-sorter delightful-table-column-sorter-full"
                        >
                          <span
                            aria-hidden="true"
                            class="delightful-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up delightful-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down delightful-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      aria-label="Age"
                      class="delightful-table-cell delightful-table-column-has-sorters"
                      scope="col"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="test-id"
                        class="delightful-table-column-sorters"
                      >
                        <span
                          class="delightful-table-column-title"
                        >
                          Age
                        </span>
                        <span
                          class="delightful-table-column-sorter delightful-table-column-sorter-full"
                        >
                          <span
                            aria-hidden="true"
                            class="delightful-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up delightful-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down delightful-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Zhang San
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Li Si
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="delightful-pagination delightful-table-pagination delightful-table-pagination-right css-dev-only-do-not-override-yotw4n css-var-r4"
        >
          <li
            aria-disabled="true"
            class="delightful-pagination-prev delightful-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="delightful-pagination-item delightful-pagination-item-1 delightful-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="delightful-pagination-next delightful-pagination-disabled"
            title="Next Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulTable > Snapshot Test > Table Snapshot with Selection 1`] = `
<DocumentFragment>
  <div
    class="css-var-r9 delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r9"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table css-var-r9 delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col
                    class="delightful-table-selection-col"
                  />
                </colgroup>
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      class="delightful-table-cell delightful-table-selection-column"
                      scope="col"
                    >
                      <div
                        class="delightful-table-selection"
                      >
                        <label
                          class="delightful-checkbox-wrapper css-var-r9 delightful-checkbox-css-var css-dev-only-do-not-override-yotw4n"
                        >
                          <span
                            class="delightful-checkbox ant-wave-target css-dev-only-do-not-override-yotw4n"
                          >
                            <input
                              aria-label="Select all"
                              class="delightful-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="delightful-checkbox-inner"
                            />
                          </span>
                        </label>
                      </div>
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="delightful-table-cell delightful-table-selection-column"
                    >
                      <label
                        class="delightful-checkbox-wrapper css-var-r9 delightful-checkbox-css-var css-dev-only-do-not-override-yotw4n"
                      >
                        <span
                          class="delightful-checkbox ant-wave-target css-dev-only-do-not-override-yotw4n"
                        >
                          <input
                            class="delightful-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="delightful-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      Zhang San
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="delightful-table-cell delightful-table-selection-column"
                    >
                      <label
                        class="delightful-checkbox-wrapper css-var-r9 delightful-checkbox-css-var css-dev-only-do-not-override-yotw4n"
                      >
                        <span
                          class="delightful-checkbox ant-wave-target css-dev-only-do-not-override-yotw4n"
                        >
                          <input
                            class="delightful-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="delightful-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      Li Si
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="delightful-pagination delightful-table-pagination delightful-table-pagination-right css-dev-only-do-not-override-yotw4n css-var-r9"
        >
          <li
            aria-disabled="true"
            class="delightful-pagination-prev delightful-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="delightful-pagination-item delightful-pagination-item-1 delightful-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="delightful-pagination-next delightful-pagination-disabled"
            title="Next Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulTable > Snapshot Test > Empty Data Table Snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-var-r2 delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r2"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table delightful-table-empty css-var-r2 delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-placeholder"
                  >
                    <td
                      class="delightful-table-cell"
                      colspan="2"
                    >
                      <div
                        class="css-dev-only-do-not-override-yotw4n css-var-r2 delightful-empty delightful-empty-normal"
                      >
                        <div
                          class="delightful-empty-image"
                        >
                          <svg
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              No data
                            </title>
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                cx="32"
                                cy="33"
                                fill="#f5f5f5"
                                rx="32"
                                ry="7"
                              />
                              <g
                                fill-rule="nonzero"
                                stroke="#d9d9d9"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  fill="#fafafa"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <div
                          class="delightful-empty-description"
                        >
                          No data
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulTable > Snapshot Test > Compact Table Snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-var-ra delightful-table-css-var delightful-table-wrapper acss-x1upb1 css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-ra"
    >
      <div
        class="delightful-spin-container"
      >
        <div
          class="delightful-table delightful-table-small css-var-ra delightful-table-css-var css-dev-only-do-not-override-yotw4n delightful-table-scroll-horizontal"
        >
          <div
            class="delightful-table-container"
          >
            <div
              class="delightful-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="width: max-content; min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="delightful-table-thead"
                >
                  <tr>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="delightful-table-cell"
                      scope="col"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="delightful-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="delightful-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Zhang San
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="delightful-table-row delightful-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="delightful-table-cell"
                    >
                      Li Si
                    </td>
                    <td
                      class="delightful-table-cell"
                    >
                      30
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="delightful-pagination delightful-pagination-mini delightful-table-pagination delightful-table-pagination-right css-dev-only-do-not-override-yotw4n css-var-ra"
        >
          <li
            aria-disabled="true"
            class="delightful-pagination-prev delightful-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="delightful-pagination-item delightful-pagination-item-1 delightful-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="delightful-pagination-next delightful-pagination-disabled"
            title="Next Page"
          >
            <button
              class="delightful-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
